style: update login button styles and replace class with custom btn-login

--- a/login.html
+++ b/login.html
@@ -42,12 +42,7 @@
               </button>
             </div>
           </div>
-          <button
-            type="submit"
-            class="btn btn-primary w-100"
-            disabled
-            id="loginBtn"
-          >
+          <button type="submit" class="btn-login w-100" disabled id="loginBtn">
             Login
           </button>
           <div class="mt-3">
