--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
+  <body class="login">
     <div
       class="d-flex flex-column justify-content-center align-items-center vh-100 bg-overlay"
     >
